Switch URL to URI in link (#13)
Switch URL to URI in link